--- a/index.new.html
+++ b/index.new.html
@@ -400,117 +400,122 @@
     </div>
     <div class="changelog">
 
+
+        <hr id="v9">
         <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a
-                    href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
+            <h2>V9</h2>
+            <h3 class="version_date"> 29/03/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/9"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #26</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v9/index.html" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v9"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
+            </h3>
             <ul>
                 <li>
-                    <strong>Added:</strong>
+                    <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
+                        <li>a new redeign</li>
+                        <li> more cards to project.html</li>
+                        </ll>
+                    </ul>
+                <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>responiveness</li>
+                        <li>old version 5/6 code not displaying correctly</li>
+                    </ul>
+                <li>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>about.html and index.html about section text</li>
                     </ul>
                 </li>
                 <li>
-                    <strong>Improved:</strong>
+                    <h3 class="h3_header"> rc 8</h3>
+                    <h3> 29/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/27" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #19</a></h3>
+                    <strong class="fixed">fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
+                        <li>links on project.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 7</h3>
+                    <h3> 29/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/25" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #25</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>more fixes and imrpovements to mobile experience</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 6</h3>
+                    <h3> 29/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/24" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #24</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>mobile experience</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 5</h3>
+                    <h3> 27/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/23" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #23</a></h3>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new table for my qualifcation I gained while working at cameo</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 4</h3>
+                    <h3> 27/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/22" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #22</a></h3>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>about.html and index.html about section text</li>
+                        <li>hc v9 project card image preview</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 3</h3>
+                    <h3> 20/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/21" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #21</a></h3>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>about ne link on index.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 2</h3>
+                    <h3> 21/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/20" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #20</a></h3>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new card deesign changes on index.html and project.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 1</h3>
+                    <h3> 20/03/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/19" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #19</a></h3>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>a new redeign and better combined code</li>
                     </ul>
                 </li>
             </ul>
         </div>
-        <hr>
-        <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a
-                    href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
-            <ul>
-                <li>
-                    <strong>Added:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Improved:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a
-                    href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
-            <ul>
-                <li>
-                    <strong>Added:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Improved:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <hr>
-        <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a
-                    href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
-            <ul>
-                <li>
-                    <strong>Added:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Improved:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a
-                    href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
-            <ul>
-                <li>
-                    <strong>Added:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
-                    </ul>
-                </li>
-                <li>
-                    <h3> dev 1 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;"
-                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">
-                            website</a></h3>
-                    <strong>Fixed:</strong>
-                    <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Menu icon aligment</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <hr id="v8">
+        <hr id="v8.1">
         <div class="version">
             <h2>V8.1.0</h2>
             <h3 class="version_date"> 27/12/21 - 09/01/22 <a
