--- a/index.new.html
+++ b/index.new.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Changelog</title>
     <link rel="stylesheet" href="./assets/css/main-new.css">
+    <link rel="icon" href="https://assets.hannahcodes.co.uk/images/home_pics/hc-with-bg-v2.ico" />
     <style>
 
     </style>
