updated page title

--- a/index.new.html
+++ b/index.new.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Changelog</title>
+    <title>hannah code changelog</title>
     <link rel="stylesheet" href="./assets/css/main-new.css">
     <link rel="icon" href="https://assets.hannahcodes.co.uk/images/home_pics/hc-with-bg-v2.ico" />
     <style>
