--- a/index.new.html
+++ b/index.new.html
@@ -402,6 +402,131 @@
     <div class="changelog">
 
 
+        <hr id="v10">
+        <div class="version">
+            <h2>V10</h2>
+            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/41"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10/index.html" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
+            </h3>
+            <ul>
+                <li>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new lightmode</li>
+                        <li>new blog.html page</li>
+                        </ll>
+                    </ul>
+                <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>lots of code issues</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 9</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/40" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #40</a></h3>
+                    <strong class="fixed">fixed</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>version 9 code to old directory folder</li>
+                        <li> new cards on project.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 8</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/39" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #39</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>further fixed size aligment of blog.html on smaller screen (i.e. ipad pro 12.9")</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 7</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/38" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #38</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>fixed size aligment of blog.html on smaller screen (i.e. ipad pro 12.9")</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 6</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/37" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #37</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog post layout on larger screens (i.e. 1920x1080+ )</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 5</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/36" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #36</a></h3>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>index.html logo padding on smaller screens</li>
+                    </ul>
+                    <strong class="afixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>more fixes to nav bar on blog.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 4</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/35" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #35</a></h3>
+                    <strong class="fixed">fixed</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog nav links and logo displaying correctly on blog.html</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 3</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/34" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #34</a></h3>
+                    <strong class="fixed">improved</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog.html on larger screens</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 2</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/33" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #33</a></h3>
+                    <strong class="fixed">fixed</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>dark mode on blog,html for mobile</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3 class="h3_header"> rc 1</h3>
+                    <h3> 26/04/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/31" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #31</a></h3>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new light mode</li>
+                        <li>new blog.html</li>
+
+                    </ul>
+                <li>dark mode is not display correct colour when on mobile will fix in next rc build</li>
+                </li>
+            </ul>
+        </div>
         <hr id="v9">
         <div class="version">
             <h2>V9</h2>
@@ -491,7 +616,7 @@
                             #21</a></h3>
                     <strong class="amended">amended</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>about ne link on index.html</li>
+                        <li>about me link on index.html</li>
                     </ul>
                 </li>
                 <li>
