--- a/index.new.html
+++ b/index.new.html
@@ -468,26 +468,45 @@
                 </li>
             </ul>
         </div>
-        <hr id="v10.1">
+        <hr id="v13">
         <div class="version">
-            <h2>V10.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h2>V13</h2>
+            <h3 class="version_date"> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/101"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #101</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v13/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v13"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="added"> added </strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        </ll>
+                        <li> new modal on project.html</li>
+                        <li> new main.css file </li>
                     </ul>
-                <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="removed"> removed </strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li> excess whitespace needed on project.html code</li>
+                        <li>hannahcodes.html</li>
+                        <li>old main.css file</li>
+                    </ul>
+                    <strong class="fixed"> fixed </strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li> project.html hc modal's responsiveness</li>
+                        <li> index.html header text not aligning correctly in the center of the screen</li>
+                        <li> project.html responsiveness </li>
+                        <li> fixed index.html about section aligning too much to the left</li>
+                        <li> url link to changelog on 404.html</li>
+                        <li> about.html who am I section's aligmnent and increased the right margin for &lt;span&gt;
+                        </li>
+                        <li> 404.html url links and style links </li>
+                        <li> 404.html responsiveness </li>
+                        <li> about.html responsiveness </li>
+                        <li> incorrect active state </li>
+                        <li> index.html responsiveness </li>
+
                     </ul>
                 </li>
                 <h3 class="h3_header"> rc 1</h3>
