--- a/index.new.html
+++ b/index.new.html
@@ -1843,23 +1843,40 @@
                     </ul>
                 </li>
                 <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+                <h3> 25/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/44" class="a_link"
                         onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
+                        #44</a></h3>
+                <strong class="added">added</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>new Recent Post ui experience</li>
+                </ul>
+                <strong class="fixed">fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>some imges code issues</li>
+                </ul>
+            </ul>
+            </li>
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 22/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/43" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #100</a></h3>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>bootstrap.css file</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 22/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/42" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     #100</a></h3>
+            <strong class="fixed">fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some project cards on projects.html not displaying correctly</li>
             </ul>
-            </ul>
-            </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+            <strong class="amended">amended</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>blog page which now no longer uses bootstrap</li>
             </ul>
             </ul>
             </li>
