--- a/index.new.html
+++ b/index.new.html
@@ -1835,25 +1835,29 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        </ll>
+                        <li>new recent post experience</li>
                     </ul>
-                <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="fixed">fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some code issues</li>
                     </ul>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog pages no longer uses bootstrap</li>
                 </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 25/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/44" class="a_link"
-                        onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #44</a></h3>
-                <strong class="added">added</strong>
-                <ul style="list-style-type: disc; padding-left: 20px;">
-                    <li>new Recent Post ui experience</li>
-                </ul>
-                <strong class="fixed">fixed</strong>
-                <ul style="list-style-type: disc; padding-left: 20px;">
-                    <li>some imges code issues</li>
-                </ul>
+            </ul>
+            <h3 class="h3_header"> rc 3</h3>
+            <h3> 25/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/44" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #44</a></h3>
+            <strong class="added">added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new Recent Post ui experience</li>
+            </ul>
+            <strong class="fixed">fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some imges code issues</li>
+            </ul>
             </ul>
             </li>
             <h3 class="h3_header"> rc 2</h3>
