fixed another link on v10.1 and added v10.2

--- a/index.new.html
+++ b/index.new.html
@@ -1779,42 +1779,54 @@
                     #100</a></h3>
             </ul>
             </ul>
-            </li>
+            </li>t-style-type: disc; padding-left: 20px;"
             </ul>
         </div>
         <hr id="v10.2">
         <div class="version">
             <h2>V10.2</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/48"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #48</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.2/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.2"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="added"> added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        </ll>
+                        <li>new blog post</li>
                     </ul>
-                <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="amended"> amended </strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                    </ul>
+                        <li>index blog section on index.html</li>
+                        <li>some other blog code</li>
                 </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
-                        onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
+            </ul>
+            </ul>
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 30/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/47" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #47</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index blog section on index.html</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 29/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/46" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #46</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new blog post</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some blog code</li>
             </ul>
             </ul>
             </li>
@@ -1823,9 +1835,9 @@
         <hr id="v10.1">
         <div class="version">
             <h2>V10.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/45"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #45</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
                 <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
@@ -1845,6 +1857,7 @@
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>blog pages no longer uses bootstrap</li>
                 </li>
+            </ul>
             </ul>
             <h3 class="h3_header"> rc 3</h3>
             <h3> 25/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/44" class="a_link"
